--- a/scala/play-app-run/Dockerfile
+++ b/scala/play-app-run/Dockerfile
@@ -1,5 +1,3 @@
 FROM scala/play-app:1.0
 
-RUN cd /opt/ ; git clone https://github.com/richared1979/play-app.git
-
-ENTRYPOINT cd /opt/play-app/ ; activator run
+ENTRYPOINT cd /opt/play-app/ ; sbt run
